--- a/index.html
+++ b/index.html
@@ -127,28 +127,11 @@
     <div class="panel-heading">Fraud Metrics</div>
     <div class="panel-body">
     <div class="col-md-offset-4">
-
-    <div id= "selectable">
-        <button type="button" onclick="testFunc()" class="btn btn-primary">Clear Items</button>
-        <button type="button" onclick="testFunc1()" class="btn btn-primary">Clear Ticket</button>
-        <button type="button" class="btn btn-primary">Discount</button>
-        <button type="button" class="btn btn-primary">Price Change</button>
-        <button type="button" class="btn btn-primary">Void Items</button>
-    </div>
-    <link href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
-    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-    <script>
-      $(function() {
-        $( "#selectable" ).selectable();
-      });
-    </script>
-    <style>
-      #selectable .ui-selecting { background: #FECA40; }
-      #selectable .ui-selected { background: #F39814; color: white; }
-      /*#selectable { list-style-type: none; margin: 0; padding: 0; width: 60%; }*/
-      /*#selectable button { margin: 1px; padding: 0.4em; font-size: 1.4em; height: 18px; }*/
-    </style>
+    <button id="1" type="button" onclick="testFunc()" class="btn btn-primary">Clear Items</button>
+    <button id="2" type="button" onclick="testFunc1()"class="btn btn-primary">Clear Ticket</button>
+    <button id="3" type="button" class="btn btn-primary">Discount</button>
+    <button id="4" type="button" class="btn btn-primary">Price Change</button>
+    <button id="5" type="button" class="btn btn-primary">Void Items</button>
     
     </div>
     <div class="panel-body" id="container3" style="width:100%; height: 300px; margin: 0 auto"></div>
