--- a/index.html
+++ b/index.html
@@ -63,9 +63,10 @@
 		        // Display a confirmation message on the screen
 		        echo "Sent message to $name";
 		    }
+		    ?>
 		}
 		</script>
 
-		<a href="#" onclick="runPHP();">Click Me!</a>
+		<a href="#" onclick="runPHP();">Send Message</a>
 	</body>
 </html>
