--- a/index1.html
+++ b/index1.html
@@ -130,11 +130,11 @@
     <div class="panel-heading">Fraud Metrics</div>
     <div class="panel-body">
     <div class="col-md-offset-4">
-    <button id="1" type="button" onclick="testFunc()" class="btn btn-primary">Clear Items</button>
-    <button id="2" type="button" onclick="testFunc1()"class="btn btn-primary">Clear Ticket</button>
+    <button id="1" type="button" onclick="testFunc()" class="btn btn-primary">Cleared Items</button>
+    <button id="2" type="button" onclick="testFunc1()"class="btn btn-primary">Cleared Tickets</button>
     <button id="3" type="button" class="btn btn-primary">Discount</button>
     <button id="4" type="button" class="btn btn-primary">Price Change</button>
-    <button id="5" type="button" onclick="testFunc1()" class="btn btn-primary">Void Items</button>
+    <button id="5" type="button" onclick="testFunc1()" class="btn btn-primary">Voided Items</button>
     
     </div>
     <div class="panel-body" id="container3" style="width:100%; height: 300px; margin: 0 auto"></div>
@@ -348,7 +348,7 @@ function testFunc() { $(function () {
         yAxis: {
             min: 0,
             title: {
-                text: 'Total fruit consumption'
+                text: ''
             },
             stackLabels: {
                 enabled: true,
@@ -412,7 +412,7 @@ function testFunc1() { $(function () {
         yAxis: {
             min: 0,
             title: {
-                text: 'Total fruit consumption'
+                text: ''
             },
             stackLabels: {
                 enabled: true,
